Use fixed max-width for noelletiny font
Was using % before, which is all well and good on wide screens but cramps the text too much on narrow screens

--- a/css/global.css
+++ b/css/global.css
@@ -818,7 +818,7 @@ d-text {
 
 	&[font=tiny] {
 		font-family: "DeltaFont Tiny", var(--font);
-		max-width: 61%;
+		max-width: 10.6em;
 	}
 
 	&[font=sans] {
